Update start hive script.