@@ -3,12 +3,7 @@
 source $BASH_IT/script/util.sh
 
 NGMR_HOME="$DEVROOT/$NGMRROOT/spark"
-
-if [ "$TDH_VERSION" = "3.4" ]; then
-  NGMR_SHELL_HOME="$DEVROOT/$NGMRROOT/shark"
-else
-  NGMR_SHELL_HOME="$DEVROOT/$NGMRROOT/inceptor"
-fi
+NGMR_SHELL_HOME="$DEVROOT/$NGMRROOT/inceptor"
 INCEPTOR_HOME="$DEVROOT/inceptor"
 
 if [ $(uname) = "Darwin" ]; then
@@ -19,48 +14,36 @@ fi
 
 CLASSPATH=$CLASSPATH:$INCEPTOR_HOME/conf
 
-#Promote slf4j1.7.5
-for jar in `find $NGMR_HOME/core/target/lib-idea -name 'slf4j*1.7.5*jar'`; do
-  CLASSPATH+=:$jar
-done
-
-if [ "$TDH_VERSION" = "3.4" ]; then
-  paths=(
-  $DEVROOT/$HIVEROOT/src/build/dist/lib
-  $DEVROOT/$HIVEROOT/src/build/ivy/lib/default 
-  $DEVROOT/$HIVEROOT/src/build/ivy/lib/hadoop0.23.shim
-  $NGMR_SHELL_HOME/target
-  $NGMR_SHELL_HOME/lib
-  $NGMR_SHELL_HOME/lib_managed 
-  $NGMR_HOME/core/target
-  $NGMR_HOME/lib_managed 
-  $MYSQL_CONNECTOR
-  )
-else
-  #paths=(
-  #$NGMR_SHELL_HOME/target
-  #$NGMR_HOME/lib_managed
-  #$DEVROOT/$HIVEROOT/src
-  #$NGMR_SHELL_HOME/lib
-  #$NGMR_SHELL_HOME/lib_managed 
-  #$NGMR_SHELL_HOME/../scala/lib
-  #$MYSQL_CONNECTOR
-  #)
+if [ -e "$INCEPTOR_HOME/idea/out/production" ]; then
+  # Prefer IDE compiled classes.
+  CLASSPATH+=:$INCEPTOR_HOME/idea/out/production/inceptor
+  CLASSPATH+=:$INCEPTOR_HOME/idea/out/production/spark-core
+  CLASSPATH+=:$INCEPTOR_HOME/idea/out/production/spark-holodesk
+  CLASSPATH+=:$INCEPTOR_HOME/idea/out/production/hive
+  CLASSPATH+=:$NGMR_HOME/streaming/target/spark-streaming_2.10-1.1.0-transwarp.jar
   paths=(
   $NGMR_SHELL_HOME/target/lib-idea
   $NGMR_HOME/core/target/lib-idea
   $NGMR_HOME/holodesk/target/lib-idea
-  $NGMR_HOME/streaming/target/lib-idea
   $DEVROOT/$HIVEROOT/src/target/lib-idea
+  $NGMR_HOME/streaming/target/lib-idea
   $MYSQL_CONNECTOR
+  )
+else
+  # Then command line built jars.
+  paths=(
+  $NGMR_SHELL_HOME/target
+  $NGMR_HOME/core/target
+  $NGMR_HOME/holodesk
+  $DEVROOT/$HIVEROOT/src
+  $NGMR_HOME/streaming/target
   )
 fi
 
-CLASSPATH+=:$INCEPTOR_HOME/idea/out/production/inceptor
-CLASSPATH+=:$INCEPTOR_HOME/idea/out/production/spark-core
-CLASSPATH+=:$INCEPTOR_HOME/idea/out/production/spark-holodesk
-CLASSPATH+=:$INCEPTOR_HOME/idea/out/production/hive
-CLASSPATH+=:NGMR_HOME/streaming/target/spark-streaming_2.10-1.1.0-transwarp.jar
+#Promote slf4j1.7.5
+for jar in `find $NGMR_HOME/core/target/lib-idea -name 'slf4j*1.7.5*jar'`; do
+  CLASSPATH+=:$jar
+done
 
 for path in ${paths[@]}; do
   for jar in `find_without_slf4j $path`; do
@@ -71,4 +54,3 @@ done
 #echo $CLASSPATH;
 
 $JAVA_HOME/bin/java $HADOOP_OPTS -Dlog4j.configuration=file://$INCEPTOR_HOME/conf/hive-log4j.properties -server -Xmx8192m -XX:+UseParNewGC -XX:NewRatio=2 -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=70 -cp $CLASSPATH $@
-#$JAVA_HOME/bin/java $HADOOP_OPTS -Dlog4j.configuration=file://$INCEPTOR_HOME/conf/hive-log4j.properties -server -Xmx4096m -XX:+UseParNewGC -XX:NewRatio=2 -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=70 -cp $CLASSPATH org.apache.hadoop.hive.cli.CliDriver -N $@
